--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 requests = "^2.31.0"
 argparse = "^1.4.0"
 logging = "^0.4.9.6"
+teamcity-messages = "^1.32"
 
 [build-system]
 requires = ["poetry-core"]
